[package]
name = "jrsonnet-lint"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "jrsonnet_lint"
path = "src/lib.rs"

[[bin]]
name = "jrsonnet-lint"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
jrsonnet-rowan-parser.workspace = true
rowan.workspace = true
thiserror.workspace = true
