[package]
name = "jrsonnet-macros"
description = "Macros to reduce boilerplate in jrsonnet-evaluator usage"
authors = ["Yaroslav Bolyukin <iam@lach.pw>"]
license = "MIT"
version.workspace = true
repository.workspace = true
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "visit", "derive", "visit-mut"] }
