[package]
name = "jrsonnet-parser"
description = "jsonnet language parser and AST"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
exp-destruct = []
exp-null-coaelse = []

[dependencies]
jrsonnet-interner.workspace = true
jrsonnet-gcmodule.workspace = true

static_assertions.workspace = true

peg.workspace = true
