[package]
name = "jrsonnet-parser"
description = "jsonnet language parser and AST"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
exp-destruct = []
exp-null-coaelse = []

[dependencies]
jrsonnet-interner.workspace = true
jrsonnet-gcmodule.workspace = true

static_assertions.workspace = true

nom.workspace = true
jrsonnet-tokenizer = { version = "0.5.0-pre96", path = "../jrsonnet-tokenizer" }
jrsonnet-macros.workspace = true
