[package]
name = "jrsonnet-rowan-parser"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = "1.0"
backtrace = "0.3.63"
drop_bomb = "0.1.5"
indoc = "1.0"
logos = "0.12"
miette = { version = "5.5.0", features = ["fancy"] }
rowan = "0.15"
text-size = "1.1"
thiserror = "1.0"

[dev-dependencies]
backtrace = "0.3.63"
indoc = "1.0"
insta = "1.15"
anyhow = "1.0"
