[package]
name = "jrsonnet-rowan-parser"
version.workspace = true
edition = "2021"

[dependencies]
anyhow.workspace = true
drop_bomb.workspace = true
indoc.workspace = true
logos.workspace = true
miette = { workspace = true, features = ["fancy"] }
rowan.workspace = true
text-size.workspace = true
thiserror.workspace = true

[dev-dependencies]
indoc.workspace = true
insta.workspace = true
anyhow.workspace = true
