[package]
name = "jrsonnet-rowan-parser"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
drop_bomb.workspace = true
hi-doc.workspace = true
indoc.workspace = true
logos.workspace = true
rowan.workspace = true
thiserror.workspace = true

[dev-dependencies]
indoc.workspace = true
insta.workspace = true
anyhow.workspace = true
strip-ansi-escapes = "0.2.1"
