[package]
name = "jrsonnet-trace"
version = "1.0.0"
authors = ["Лач <iam@lach.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jrsonnet-evaluator = { path = "../jrsonnet-evaluator", version = "1.0.0" }
jrsonnet-parser = { path = "../jrsonnet-parser", version = "1.0.0" }
pathdiff = "0.2.0"
annotate-snippets = "0.9.0"
