[package]
name = "jrsonnet-types"
description = "Jrsonnet type system definition"
version.workspace = true
repository.workspace = true
authors = ["Yaroslav Bolyukin <iam@lach.pw>"]
license = "MIT"
edition = "2021"

[dependencies]
boa_gc = { git = "https://github.com/boa-dev/boa", version = "0.17.0" }

peg.workspace = true

[features]
exp-bigint = []
