[package]
name = "jrsonnet-types"
description = "Jrsonnet type system definition"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
jrsonnet-gcmodule.workspace = true

peg.workspace = true

[features]
exp-bigint = []
