[package]
name = "jsonnet-evaluator"
version = "0.1.0"
authors = ["Лач <iam@lach.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonnet-parser = { path = "../jsonnet-parser" }
closure = "0.3.0"
jsonnet-stdlib = { version = "0.1.0", path = "../jsonnet-stdlib" }
