[package]
name = "jsonnet-evaluator"
version = "0.1.0"
authors = ["Лач <iam@lach.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serialized-stdlib", "faster"]
serialized-stdlib = ["serde", "bincode"]
# Replace some standard library functions with faster implementations
faster = []

[dependencies]
jsonnet-parser = { path = "../jsonnet-parser" }
closure = "0.3.0"
jsonnet-stdlib = { path = "../jsonnet-stdlib" }
indexmap = "1.4.0"

[dependencies.serde]
version = "1.0.111"
optional = true

[dependencies.bincode]
version = "1.2.1"
optional = true

[build-dependencies]
jsonnet-parser = { path = "../jsonnet-parser" }
jsonnet-stdlib = { path = "../jsonnet-stdlib" }
serde = "1.0.111"
bincode = "1.2.1"
