[package]
name = "jsonnet-evaluator"
version = "0.1.0"
authors = ["Лач <iam@lach.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serialized-stdlib", "faster"]
serialized-stdlib = ["serde", "bincode"]
# Replace some standard library functions with faster implementations
# Library works fine without this feature, but requires more memory and time for std function calls
faster = []

[dependencies]
jsonnet-parser = { path = "../jsonnet-parser" }
closure = "0.3.0"
jsonnet-stdlib = { path = "../jsonnet-stdlib" }
indexmap = "1.4.0"

[dependencies.serde]
version = "1.0.114"
optional = true

[dependencies.bincode]
version = "1.3.1"
optional = true

[build-dependencies]
jsonnet-parser = { path = "../jsonnet-parser" }
jsonnet-stdlib = { path = "../jsonnet-stdlib" }
serde = "1.0.114"
bincode = "1.3.1"
